plugins {
    id 'java-library'
    id 'application'
    id 'maven-publish'
    id 'com.google.protobuf' version '0.9.5'
}

group = 'computationalgraph'
version = file('VERSION').text.trim()

repositories {
    mavenCentral()
}

dependencies {
    api 'org.ow2.asm:asm:9.6'
    api 'com.google.protobuf:protobuf-java:4.29.3'

    implementation 'org.ow2.asm:asm-commons:9.6'
    implementation 'org.bytedeco:openblas-platform:0.3.31-1.5.13'
    runtimeOnly project(':synaptik-metal-macos-arm64')

    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

protobuf {
    protoc {
        artifact = 'com.google.protobuf:protoc:4.29.3'
    }
}

java {
    withSourcesJar()

    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

def runtimeJvmArgs = [
        '--add-modules=jdk.incubator.vector',
        '--enable-native-access=ALL-UNNAMED'
]

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    jvmArgs runtimeJvmArgs
    def metalMpsLib = System.getProperty('synaptik.metal.mps.lib')
    if (metalMpsLib != null && !metalMpsLib.isBlank()) {
        systemProperty 'synaptik.metal.mps.lib', metalMpsLib
    }
    def configuredTestHeap = System.getProperty('synaptik.testMaxHeap')
    if (configuredTestHeap != null && !configuredTestHeap.isBlank()) {
        maxHeapSize = configuredTestHeap
    } else {
        maxHeapSize = '2g'
    }
}

tasks.withType(JavaExec).configureEach {
    jvmArgs runtimeJvmArgs
}

application {
    mainClass = 'synaptik.app.TuningCli'
    applicationDefaultJvmArgs = runtimeJvmArgs
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            groupId = 'com.github.pho001'
            artifactId = 'Synaptik'
            version = project.version

            pom {
                name = 'Synaptik'
                description = 'Java autograd engine and compiled tensor runtime.'
                url = 'https://github.com/pho001/Synaptik'
                scm {
                    url = 'https://github.com/pho001/Synaptik'
                    connection = 'scm:git:https://github.com/pho001/Synaptik.git'
                    developerConnection = 'scm:git:https://github.com/pho001/Synaptik.git'
                }
                developers {
                    developer {
                        id = 'pho001'
                    }
                }
            }
        }
    }
}

def sourceArtifactRoots = [layout.projectDirectory.dir('src'), layout.projectDirectory.dir('test')]
def sourceArtifactPatterns = ['**/*.class', '**/*.java.txt', '**/*.java.bak', '**/*.java.orig', '**/*.java.tmp', '**/*~', '**/.tmp*', '**/*.tmp*', '**/.DS_Store']

tasks.register('verifySourceTreeClean') {
    group = 'verification'
    description = 'Fails when generated artifacts exist inside src/ or test/.'
    doLast {
        def offenders = sourceArtifactRoots.findAll { it.asFile.exists() }
                .collectMany { root ->
                    fileTree(root) {
                        sourceArtifactPatterns.each { include it }
                    }.files.collect { project.relativePath(it) }
                }
                .sort()
        if (!offenders.isEmpty()) {
            throw new GradleException('Generated artifacts found in source tree: ' + offenders)
        }
    }
}

tasks.register('cleanSourceArtifacts', Delete) {
    group = 'build setup'
    description = 'Deletes generated artifacts accidentally written into src/ or test/.'
    delete sourceArtifactRoots.collectMany { root ->
        fileTree(root) {
            sourceArtifactPatterns.each { include it }
        }.files
    }
}

tasks.named('clean') {
    dependsOn tasks.named('cleanSourceArtifacts')
}

tasks.named('check') {
    dependsOn tasks.named('verifySourceTreeClean')
}

def isMacOs = {
    System.getProperty('os.name', '').toLowerCase().contains('mac')
}
def normalizedNativeOs = {
    def os = System.getProperty('os.name', '').toLowerCase()
    if (os.contains('mac')) {
        return 'macos'
    }
    if (os.contains('linux')) {
        return 'linux'
    }
    if (os.contains('windows')) {
        return 'windows'
    }
    return os.replaceAll('[^a-z0-9]+', '_')
}
def normalizedNativeArch = {
    def arch = System.getProperty('os.arch', '').toLowerCase()
    if (arch == 'aarch64' || arch == 'arm64') {
        return 'arm64'
    }
    if (arch == 'x86_64' || arch == 'amd64') {
        return 'x64'
    }
    return arch.replaceAll('[^a-z0-9_]+', '_')
}
def nativePlatformId = {
    "${normalizedNativeOs()}-${normalizedNativeArch()}"
}
def isMacosArm64 = {
    normalizedNativeOs() == 'macos' && normalizedNativeArch() == 'arm64'
}
def metalMpsShimLib = layout.buildDirectory.file('native/apple/libsynaptik_apple_mps.dylib')
def cudaGraphShimLib = layout.buildDirectory.file("native/cuda/${isMacOs() ? 'libsynaptik_cuda_graph.dylib' : 'libsynaptik_cuda_graph.so'}")
def hasNvcc = {
    def process = new ProcessBuilder('bash', '-lc', 'command -v nvcc >/dev/null 2>&1').start()
    process.waitFor() == 0
}

tasks.register('buildMetalMpsShim', Exec) {
    group = 'build setup'
    description = 'Builds the local Metal MPS shim dylib for FFM loading on macOS.'
    onlyIf {
        isMacOs()
    }
    inputs.file layout.projectDirectory.file('src/main/native/apple/synaptik_apple_mps_stub.m')
    outputs.file metalMpsShimLib
    commandLine '/bin/zsh', "${project.projectDir}/scripts/build-metal-mps-shim.sh"
    doFirst {
        if (!isMacOs()) {
            throw new GradleException('buildMetalMpsShim is supported only on macOS.')
        }
    }
}

tasks.register('refreshMetalMacosArm64Resource', Copy) {
    group = 'build setup'
    description = 'Rebuilds the Metal MPS shim and refreshes the macOS ARM64 native artifact resource.'
    onlyIf {
        isMacosArm64()
    }
    dependsOn tasks.named('buildMetalMpsShim')
    from metalMpsShimLib
    into layout.projectDirectory.dir("synaptik-metal-macos-arm64/src/main/resources/native/${nativePlatformId()}")
}

tasks.named('processResources') {
    from('profiles') {
        into 'profiles'
        include 'platform/**/calibration/schema-v2/latest/**/profile.json'
        include 'platform/**/calibration/*-forward.json'
        include 'platform/**/calibration/*-forward-backward.json'
        exclude { details ->
            def segments = details.relativePath.segments
            segments.length > 1 && segments[0] == 'platform' && segments[1].contains('_')
        }
    }
}

tasks.register('buildCudaGraphShim', Exec) {
    group = 'build setup'
    description = 'Builds the optional CUDA graph shim for FFM loading when nvcc is available.'
    onlyIf {
        hasNvcc()
    }
    commandLine '/bin/zsh', "${project.projectDir}/scripts/build-cuda-graph-shim.sh"
    doFirst {
        if (!hasNvcc()) {
            throw new GradleException('buildCudaGraphShim requires CUDA nvcc on PATH.')
        }
    }
}

tasks.register('nativeBuild') {
    group = 'build setup'
    description = 'Builds optional native components for the current platform.'
    dependsOn tasks.named('buildMetalMpsShim')
    dependsOn tasks.named('buildCudaGraphShim')
}

tasks.register('metalTest', Test) {
    group = 'verification'
    description = 'Builds the Metal MPS shim and runs Metal/MPS-specific tests.'
    onlyIf {
        isMacOs()
    }
    dependsOn tasks.named('buildMetalMpsShim')
    shouldRunAfter tasks.named('test')
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    doFirst {
        systemProperty 'synaptik.metal.mps.lib', metalMpsShimLib.get().asFile.absolutePath
    }
    filter {
        includeTestsMatching 'backend.metal.*'
        includeTestsMatching 'PreparedExecutionBuildTest.gpuMetal*'
        includeTestsMatching '*Metal*Sdpa*'
    }
}

tasks.register('cudaTest', Test) {
    group = 'verification'
    description = 'Builds the CUDA graph shim when nvcc is available and runs CUDA-specific tests.'
    onlyIf {
        hasNvcc()
    }
    dependsOn tasks.named('buildCudaGraphShim')
    shouldRunAfter tasks.named('test')
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    doFirst {
        systemProperty 'synaptik.cuda.graph.lib', cudaGraphShimLib.get().asFile.absolutePath
    }
    filter {
        includeTestsMatching 'backend.cuda.*'
    }
}
